--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,8 @@ version = "0.1.0"
 edition = "2021"
 description = "Interactive scripting language where you can edit the comments"
 license = "Free"
+homepage = "https://github.com/sumeet/Zac"
+repository = "https://github.com/sumeet/Zac"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
