--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,4 +1,3 @@
-cargo-features = ["edition2021"]
 [package]
 name = "zac"
 version = "0.1.0"
@@ -24,3 +23,4 @@ anyhow = "*"
 itertools = "*"
 dyn-clone = "*"
 dyn_partial_eq = "*"
+pretty = "*"
